# notas-musicais-2

./: mkdocs.yml  pyproject.toml
docs/: index.md
notas_musicais_2/: escalas.py
tests/: test_escalas.py
