[tool.poetry]
name = "notas-musicais-2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "notas_musicais_2"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
blue = "^0.9.1"
isort = "^5.13.2"
taskipy = "^1.12.2"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.5.5"
mkdocstrings = "^0.24.0"
mkdocstrings-python = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
